# FastF1-app

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  streamlit_app.py
.claude/skills/: add-endpoint.md
src/: app.py  cache.py
src/models/: __init__.py  race.py  year.py
tests/: test_endpoints.py
